Bug 430637 - Layer Properties dialog does not automatically have focus
Summary: Layer Properties dialog does not automatically have focus
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 4.4.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: tusooa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-20 21:33 UTC by tusooa
Modified: 2020-12-28 16:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tusooa 2020-12-20 21:33:05 UTC
SUMMARY
Layer Properties dialog does not automatically have focus upon pop-up.
"Set Copy From" dialog also has this problem.

This is different from the behaviour of HSV/HSL Adjustment.

STEPS TO REPRODUCE
1. Open a document in Krita.
2. In the Layers Docker, right click on a layer and click on "Layer Properties."

OBSERVED RESULT
The dialog does not have focus. (Pressing ESC will not close the dialog.)

EXPECTED RESULT
The dialog should have focus. (Pressing ESC will close the dialog.)

Reasoning: when the user triggers this dialog via shortcut by accident, they should be able to close this via shortcut (ESC).

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1

ADDITIONAL INFORMATION
Comment 1 tomtomtomreportingin 2020-12-21 06:11:13 UTC
Can confirm.
Comment 2 tusooa 2020-12-28 16:51:36 UTC
Git commit 1734cb1de4aa876c2b2360c0d9882963699f3cb8 by Tusooa Zhu.
Committed on 28/12/2020 at 15:52.
Pushed by tusooaw into branch 'master'.

Activate layer properties & set copy from dialogs upon showing

We activate these dialogs upon showing them to let it receive keyboard
inputs immediately, so users who accidentally invokes them can use
Esc to close it directly.

M  +2    -1    libs/ui/kis_layer_manager.cc

https://invent.kde.org/graphics/krita/commit/1734cb1de4aa876c2b2360c0d9882963699f3cb8