Activate layer properties & set copy from dialogs upon showing

We activate these dialogs upon showing them to let it receive keyboard
inputs immediately, so users who accidentally invokes them can use
Esc to close it directly.

BUG:430637